major cleanup of output